--- a/src/assets/marisa/config2.json
+++ b/src/assets/marisa/config2.json
@@ -1,81 +1,36 @@
 {
     "spells": [214],
-    "shownCost": 4,
-    "5a": {
-        "ground": {
-            "cd": 240,
-            "nb": 1,
-            "action": 301,
-            "offsetX": -15
-        },
-        "air": {
-            "cd": 240,
-            "nb": 1,
-            "action": 301,
-            "offsetX": -15,
-            "posY": 0
-        }
-    },
-    "5b": {
-        "ground": {
-            "cd": 300,
-            "nb": 1,
-            "action": 408
-        },
-        "air": {
-            "cd": 300,
-            "nb": 1,
-            "action": 408,
-            "posY": 0
-        }
-    },
-    "5c": {
-        "ground": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412,
-            "allowedKeys": [0, 0, 0, 0, 1, 0, 0, 0]
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 416,
-            "speedY": 0,
-            "gravityY": 0
-        }
-    },
-
+    "shownCost": 2,
 
     "8a": {
         "ground": {
-            "cd": 450,
+            "cd": 300,
             "nb": 1,
-            "action": 550,
+            "action": 510,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 450,
+            "cd": 300,
             "nb": 1,
-            "action": 552,
-            "speedY": 0,
-            "gravityY": 0,
+            "action": 510,
+            "posY": 0,
             "offsetX": -50,
             "cond": "end"
         }
     },
     "8b": {
         "ground": {
-            "cd": 600,
+            "cd": 225,
             "nb": 1,
-            "action": 505,
+            "action": 540,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 225,
             "nb": 1,
-            "action": 506,
+            "action": 540,
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -83,14 +38,14 @@
     },
     "8c": {
         "ground": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 565,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 567,
             "speedY": 0,
@@ -105,9 +60,9 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 4,
+            "cost": 2,
             "cardName": 214,
-            "cd": 1200,
+            "cd": 300,
             "nb": 1,
             "action": 614
         },
@@ -117,9 +72,9 @@
             "gravityY": 0,
             "offsetX": -50,
             "posY": 0,
-            "cost": 4,
+            "cost": 2,
             "cardName": 214,
-            "cd": 1200,
+            "cd": 300,
             "nb": 1,
             "action": 614
         }
