--- a/src/assets/reimu/config1.json
+++ b/src/assets/reimu/config1.json
@@ -1,77 +1,17 @@
 {
     "spells": [207],
-    "shownCost": 3,
-    "5a": {
-        "ground": {
-            "cd": 240,
-            "nb": 1,
-            "action": 304,
-            "offsetX": -50
-        },
-        "air": {
-            "cd": 240,
-            "nb": 1,
-            "action": 304,
-            "offsetX": -50,
-            "posY": 0
-        }
-    },
-    "5b": {
-        "ground": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412,
-            "posY": 0
-        }
-    },
-    "5c": {
-        "ground": {
-            "cd": 360,
-            "nb": 1,
-            "action": 410,
-            "offsetX": 0
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 414
-        }
-    },
-
+    "shownCost": 2,
 
     "8a": {
         "ground": {
-            "cd": 600,
-            "nb": 1,
-            "action": 510,
-            "offsetX": 0,
-            "cond": "end"
-        },
-        "air": {
-            "cd": 600,
-            "nb": 1,
-            "action": 512,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": 0,
-            "cond": "end"
-        }
-    },
-    "8b": {
-        "ground": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 561,
             "offsetX": 0,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 561,
             "posY": 0,
@@ -79,18 +19,35 @@
             "cond": "end"
         }
     },
-    "8c": {
+    "8b": {
         "ground": {
-            "cd": 900,
+            "cd": 450,
             "nb": 1,
             "action": 530,
             "offsetX": 0,
             "cond": "end"
         },
         "air": {
-            "cd": 900,
+            "cd": 450,
             "nb": 1,
             "action": 530,
+            "posY": 0,
+            "offsetX": 0,
+            "cond": "end"
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 300,
+            "nb": 1,
+            "action": 510,
+            "offsetX": 0,
+            "cond": "end"
+        },
+        "air": {
+            "cd": 300,
+            "nb": 1,
+            "action": 510,
             "posY": 0,
             "offsetX": 0,
             "cond": "end"
@@ -102,9 +59,9 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 3,
+            "cost": 2,
             "cardName": 207,
-            "cd": 1200,
+            "cd": 300,
             "nb": 1,
             "action": 607
         },
@@ -114,9 +71,9 @@
             "gravityY": 0,
             "offsetX": -50,
             "posY": 0,
-            "cost": 3,
+            "cost": 2,
             "cardName": 207,
-            "cd": 1200,
+            "cd": 300,
             "nb": 1,
             "action": 607
         }
