--- a/src/assets/reimu/config2.json
+++ b/src/assets/reimu/config2.json
@@ -1,61 +1,19 @@
 {
     "spells": [210],
     "shownCost": 4,
-    "5a": {
-        "ground": {
-            "cd": 240,
-            "nb": 1,
-            "action": 304,
-            "offsetX": -50
-        },
-        "air": {
-            "cd": 240,
-            "nb": 1,
-            "action": 304,
-            "offsetX": -50,
-            "posY": 0
-        }
-    },
-    "5b": {
-        "ground": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412,
-            "posY": 0
-        }
-    },
-    "5c": {
-        "ground": {
-            "cd": 360,
-            "nb": 1,
-            "action": 410,
-            "offsetX": 0
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 414
-        }
-    },
-
 
     "8a": {
         "ground": {
-            "cd": 450,
+            "cd": 225,
             "nb": 1,
-            "action": 550,
+            "action": 551,
             "offsetX": 50,
             "cond": "end"
         },
         "air": {
-            "cd": 450,
+            "cd": 225,
             "nb": 1,
-            "action": 550,
+            "action": 551,
             "posY": 0,
             "offsetX": 50,
             "cond": "end"
@@ -63,16 +21,16 @@
     },
     "8b": {
         "ground": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 540,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
-            "action": 540,
+            "action": 541,
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -80,18 +38,17 @@
     },
     "8c": {
         "ground": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 500,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
-            "action": 502,
-            "speedY": 0,
-            "gravityY": 0,
+            "action": 500,
+            "posY": 0,
             "offsetX": -50,
             "cond": "end"
         }
@@ -104,7 +61,7 @@
             "offsetX": -50,
             "cost": 4,
             "cardName": 210,
-            "cd": 1200,
+            "cd": 300,
             "nb": 1,
             "action": 610
         },
@@ -116,7 +73,7 @@
             "posY": 0,
             "cost": 4,
             "cardName": 210,
-            "cd": 1200,
+            "cd": 300,
             "nb": 1,
             "action": 610
         }
