--- a/src/assets/sakuya/config2.json
+++ b/src/assets/sakuya/config2.json
@@ -1,69 +1,17 @@
 {
-    "spells": [210],
-    "shownCost": 4,
-    "5a": {
-        "ground": {
-            "cd": 300,
-            "nb": 1,
-            "action": 304,
-            "offsetX": -15
-        },
-        "air": {
-            "cd": 300,
-            "nb": 1,
-            "start": 202,
-            "startMin": 10,
-            "startMax": 20,
-            "startKeys": [1, 0, 0, 0, 0, 0, 0, 0],
-            "action": 307,
-            "offsetX": -15
-        }
-    },
-    "5b": {
-        "ground": {
-            "cd": 360,
-            "nb": 1,
-            "action": 402
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 402,
-            "posY": 0
-        }
-    },
-    "5c": {
-        "ground": {
-            "cd": 420,
-            "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "posY": 100
-        },
-        "air": {
-            "cd": 420,
-            "nb": 1,
-            "action": 414,
-            "speedY": 0,
-            "gravityY": 0,
-            "offsetX": -20,
-            "offsetY": 20
-        }
-    },
-
+    "spells": [203],
+    "shownCost": 5,
 
     "8a": {
         "ground": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 501,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 503,
             "speedX": 5,
@@ -75,14 +23,14 @@
     },
     "8b": {
         "ground": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 525,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 525,
             "posY": 0,
@@ -92,18 +40,17 @@
     },
     "8c": {
         "ground": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 540,
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
-            "action": 542,
-            "speedY": 0,
-            "gravityY": 0,
+            "action": 540,
+            "posY": 0,
             "offsetX": -50,
             "cond": "end"
         }
@@ -114,11 +61,11 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 4,
-            "cardName": 210,
-            "cd": 1200,
+            "cost": 5,
+            "cardName": 203,
+            "cd": 300,
             "nb": 1,
-            "action": 610
+            "action": 603
         },
         "air": {
             "speedX": 0,
@@ -126,11 +73,11 @@
             "gravityY": 0,
             "offsetX": -50,
             "posY": 0,
-            "cost": 4,
-            "cardName": 210,
-            "cd": 1200,
+            "cost": 5,
+            "cardName": 203,
+            "cd": 300,
             "nb": 1,
-            "action": 610
+            "action": 603
         }
     }
 }
