--- a/src/assets/udonge/config2.json
+++ b/src/assets/udonge/config2.json
@@ -1,96 +1,51 @@
 {
     "spells": [209],
     "shownCost": 3,
-    "5a": {
-        "ground": {
-            "cd": 300,
-            "nb": 1,
-            "action": 302,
-            "hitCount": 3,
-            "offsetX": -15,
-            "speedX": 15
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 309,
-            "speedY": 0
-        }
-    },
-    "5b": {
-        "ground": {
-            "cd": 300,
-            "nb": 1,
-            "speedX": 10,
-            "action": 305
-        },
-        "air": {
-            "cd": 300,
-            "nb": 1,
-            "posY": 0,
-            "speedX": 10,
-            "action": 305
-        }
-    },
-    "5c": {
-        "ground": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412
-        },
-        "air": {
-            "cd": 360,
-            "nb": 1,
-            "action": 412,
-            "posY": 0
-        }
-    },
-
-
 
     "8a": {
         "ground": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
-            "action": 510,
-            "offsetX": -50
+            "action": 566,
+            "offsetX": 0
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
-            "action": 510,
-            "offsetX": -50,
+            "action": 566,
+            "offsetX": 0,
             "posY": 0
         }
     },
     "8b": {
         "ground": {
-            "cd": 600,
+            "cd": 300,
+            "nb": 1,
+            "action": 510,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "offsetX": -50
+        },
+        "air": {
+            "cd": 300,
+            "nb": 1,
+            "action": 510,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
+            "offsetX": -50,
+            "posY": 0
+        }
+    },
+    "8c": {
+        "ground": {
+            "cd": 300,
             "nb": 1,
             "action": 530,
             "offsetX": -50
         },
         "air": {
-            "cd": 600,
+            "cd": 300,
             "nb": 1,
             "action": 532,
             "offsetX": -50,
-            "speedY": 0,
-            "gravityY": 0
-        }
-    },
-    "8c": {
-        "ground": {
-            "cd": 600,
-            "nb": 1,
-            "action": 565,
-            "offsetX": 0
-        },
-        "air": {
-            "cd": 600,
-            "nb": 1,
-            "action": 567,
-            "offsetX": 0,
             "speedY": 0,
             "gravityY": 0
         }
@@ -103,7 +58,7 @@
             "offsetX": 0,
             "cost": 3,
             "cardName": 209,
-            "cd": 1200,
+            "cd": 300,
             "nb": 1,
             "action": 609
         },
@@ -115,7 +70,7 @@
             "offsetX": 0,
             "cost": 3,
             "cardName": 209,
-            "cd": 1200,
+            "cd": 300,
             "nb": 1,
             "action": 609
         }
