Sanae can no longer HJ during startup of assist BS no longer sometimes activate an actual system card Instant limit on death bomb Remove bodies collision on ground Fixed Youmu's 3SC flowers air use working Fixed Remilia Stigmanizer air use working

--- a/src/assets/remilia/config2.json
+++ b/src/assets/remilia/config2.json
@@ -27,6 +27,7 @@
             "cd": 450,
             "nb": 1,
             "action": 570,
+            "posY": 0,
             "speedY": 0,
             "gravityY": 0
         }
