--- a/src/assets/youmu/config1.json
+++ b/src/assets/youmu/config1.json
@@ -66,7 +66,8 @@
             "cardName": 206,
             "cd": 300,
             "nb": 1,
-            "action": 606
+            "action": 606,
+            "posY": 0
         }
     }
 }
