--- a/src/assets/iku/config0.json
+++ b/src/assets/iku/config0.json
@@ -1,6 +1,6 @@
 {
     "spells": [209],
-    "shownCost": 3,
+    "shownCost": 4,
 
     "8a": {
         "ground": {
@@ -22,16 +22,18 @@
     },
     "8b": {
         "ground": {
-            "cd": 330,
+            "cd": 450,
             "nb": 1,
-            "action": 500,
+            "action": 545,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
             "offsetX": -50,
             "cond": "end"
         },
         "air": {
-            "cd": 330,
+            "cd": 450,
             "nb": 1,
-            "action": 500,
+            "action": 545,
+            "allowedKeys": [0, 0, 0, 1, 0, 0, 0, 0],
             "posY": 0,
             "offsetX": -50,
             "cond": "end"
@@ -62,7 +64,7 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": -50,
-            "cost": 3,
+            "cost": 4,
             "cardName": 209,
             "cd": 300,
             "nb": 1,
@@ -74,7 +76,7 @@
             "gravityY": 0,
             "offsetX": -50,
             "posY": 0,
-            "cost": 3,
+            "cost": 4,
             "cardName": 209,
             "cd": 300,
             "nb": 1,
