--- a/src/assets/remilia/config1.json
+++ b/src/assets/remilia/config1.json
@@ -1,19 +1,24 @@
 {
     "spells": [207],
-    "shownCost": 3,
+    "shownCost": 5,
 
     "8a": {
         "ground": {
-            "cd": 210,
+            "cd": 241,
             "nb": 1,
-            "action": 561
+            "action": 546,
+            "offsetX": -50,
+            "recovery": 12,
+            "cond": "basic"
         },
         "air": {
-            "cd": 210,
+            "cd": 241,
             "nb": 1,
-            "action": 561,
-            "speedY": 0,
-            "gravityY": 0
+            "action": 546,
+            "posY": 0,
+            "offsetX": -50,
+            "recovery": 12,
+            "cond": "basic"
         }
     },
     "8b": {
@@ -34,17 +39,17 @@
     },
     "8c": {
         "ground": {
-            "cd": 300,
+            "cd": 210,
             "nb": 1,
-            "action": 541,
-            "offsetX": -50
+            "action": 570
         },
         "air": {
-            "cd": 300,
+            "cd": 210,
             "nb": 1,
-            "action": 541,
+            "action": 570,
             "posY": 0,
-            "offsetX": -50
+            "speedY": 0,
+            "gravityY": 0
         }
     },
 
@@ -53,7 +58,7 @@
             "speedX": 0,
             "speedY": 0,
             "offsetX": 50,
-            "cost": 3,
+            "cost": 5,
             "cardName": 207,
             "cd": 300,
             "nb": 1,
@@ -65,7 +70,7 @@
             "posY": 0,
             "gravityY": 0,
             "offsetX": 50,
-            "cost": 3,
+            "cost": 5,
             "cardName": 207,
             "cd": 300,
             "nb": 1,
